# SSH-Studio

./: .gitignore  AppImageBuilder.yml  README.md  com.sshconfigstudio.app.yml  com.sshstudio.app.json  io.github.BuddySirJava.SSH-Studio.json  io.github.BuddySirJava.SSH-Studio.json~  io.github.BuddySirJava.SSHStudio.json  meson.build
.github/workflows/: brew.yml  linux-appimage.yml  macos-dmg.yml  windows.yml
Formula/: ssh-studio.rb
data/: io.github.BuddySirJava.SSH-Studio.desktop  io.github.BuddySirJava.SSH-Studio.metainfo.xml  meson.build  ssh-config-studio.css  ssh-config-studio.gresource.xml  ssh-studio.css  ssh-studio.desktop  ssh-studio.gresource.xml  ssh-studio.in
data/ui/: generate_key_dialog.blp  host_editor.blp  host_list.blp  key_picker_dialog.blp  keyboard_shortcuts_dialog.blp  main_window.blp  preferences_dialog.blp  search_bar.blp  ssh_key_manager_dialog.blp  test_connection_dialog.blp  unsaved_changes_dialog.blp  welcome_view.blp
installer/: ssh-studio.iss  ssh-studio.nsi
po/: POTFILES  en.po  meson.build  ssh-studio.pot
src/: main.py  meson.build  ssh_config_parser.py
src/ui/: generate_key_dialog.py  host_editor.py  host_list.py  key_picker_dialog.py  keyboard_shortcuts_dialog.py  main_window.py  preferences_dialog.py  search_bar.py  ssh_key_manager_dialog.py  test_connection_dialog.py  welcome_view.py
