python_sources = [
  'main.py',
  'ssh_config_parser.py',
  'ui/host_editor.py',
  'ui/host_list.py',
  'ui/main_window.py',
  'ui/preferences_dialog.py',
  'ui/search_bar.py',
  'ui/test_connection_dialog.py',
  'ui/ssh_key_manager_dialog.py',
  'ui/generate_key_dialog.py',
  'ui/key_picker_dialog.py',
  'ui/keyboard_shortcuts_dialog.py',
]

python_installation.install_sources(
  ['ssh_config_parser.py', 'main.py', '__init__.py'],
  subdir: 'ssh_studio'
)

python_installation.install_sources(
  ['ui/host_editor.py', 'ui/host_list.py', 'ui/main_window.py', 'ui/preferences_dialog.py', 'ui/search_bar.py', 'ui/test_connection_dialog.py', 'ui/ssh_key_manager_dialog.py', 'ui/generate_key_dialog.py', 'ui/key_picker_dialog.py', 'ui/keyboard_shortcuts_dialog.py', 'ui/__init__.py'],
  subdir: 'ssh_studio/ui'
)

python_installation.install_sources(
  [],
  subdir: 'ssh_studio/ui'
)
